# wiggle-example

./: .gitignore  README.md  app.py  example1.ipynb  flake.nix  monad.ipynb  pyproject.toml  requirements.txt
